# normalization-llm

./: .env.example  README.md  config.py  dataset.csv  dataset.py  main.py  metrics.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/prompts/: instructions_based.yaml  protocol_based.yaml
