[project]
name = "normalization-llm"
version = "0.1.0"
description = "Text normalization with LLMs from OpenRouter"

dependencies = [
    "pydantic-settings",
    "requests",
    "pyyaml",
    "wandb",
    "tqdm",
    "hydra-core",
    "omegaconf",
    "rouge-score",
    "sacrebleu",
    "nltk",
    "pandas",
    "scikit-learn",
]

requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/gfktstv/normalization-llm"
